--- a/.htaccess
+++ b/.htaccess
@@ -12,7 +12,9 @@ RewriteRule ^contact$ ./?page=2 [L]
 # faq-1
 RewriteRule ^faq$ ./?page=20 [L]
 
-# 
+# online-payment-1
+
+RewriteRule ^online-payment$ ./?page=160 [L]
 # irtoya
 RewriteRule ^([0-9]+)-(.*).html$ ./?page=156&id=$1 [L]
 RewriteRule ^compare-(.*)$ ./?page=157&id=$1 [L]
